# SPACE

./: .gitignore  BUILD.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEDUP_IMPLEMENTATION.md  Dockerfile  Dockerfile.sim  ENCRYPTION_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NOTICE  QUICKSTART_S3.md  README.md  SECURITY.md  clean.sh  demo_s3.sh  deny.toml  docker-compose.yml  docs_patentable_concepts.md  readme.md  test2.txt  test_dedup.sh  test_encryption.sh  test_federation_failover.sh  test_phase4.sh
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  funding.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  dependency-drift.yml  release.yml  security-audit.yml
capsule-registry/src/: lib.rs
capsule-registry/tests/: dedup_test.rs
common/src/: lib.rs
crates/capsule-registry/: Cargo.toml  test_nvram.log.segments
crates/capsule-registry/benches/: pipeline.rs
crates/capsule-registry/src/: Cargo.toml  compression.rs  dedup.rs  error.rs  gc.rs  lib.rs  pipeline.rs
crates/capsule-registry/tests/: async_pipeline_test.rs  gc_test.rs  integration_test.rs  pipeline_sim_integration.rs  podms_metro_sync_test.rs  podms_test.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  policy.rs  traits.rs
crates/common/src/security/: audit_log.rs  bloom_dedup.rs  crypto_profiles.rs  ebpf_gateway.rs  mod.rs
crates/compression/: Cargo.toml
crates/compression/src/: error.rs  lib.rs
crates/dedup/: Cargo.toml
crates/dedup/src/: lib.rs
crates/encryption/: Cargo.toml
crates/encryption/src/: error.rs  keymanager.rs  lib.rs  mac.rs  policy.rs  xts.rs
crates/layout-engine/: Cargo.toml
crates/layout-engine/benches/: layout_bench.rs
crates/layout-engine/src/: compiler.rs  lib.rs  ml.rs  zns.rs
crates/layout-engine/src/offload/: cpu.rs  mod.rs
crates/layout-engine/tests/: plan.rs
crates/nvram-sim/: Cargo.toml
crates/nvram-sim/src/: Cargo.toml  lib.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs
crates/protocol-block/: Cargo.toml
crates/protocol-block/src/: lib.rs
crates/protocol-block/tests/: block_view_test.rs
crates/protocol-csi/: Cargo.toml
crates/protocol-csi/src/: lib.rs
crates/protocol-fuse/: Cargo.toml
crates/protocol-fuse/src/: lib.rs
crates/protocol-nfs/: Cargo.toml
crates/protocol-nfs/src/: lib.rs  phase4.rs
crates/protocol-nfs/tests/: nfs_view_test.rs
crates/protocol-nvme/: Cargo.toml
crates/protocol-nvme/src/: lib.rs
crates/protocol-s3/: Cargo.toml  space.kyber.key
crates/protocol-s3/src/: handlers.rs  lib.rs  server.rs
crates/protocol-s3/tests/: s3_view_test.rs  security_refresh_test.rs
crates/scaling/: Cargo.toml
crates/scaling/src/: agent.rs  compiler.rs  lib.rs  tests.rs
crates/sim-nvmeof/: Cargo.toml
crates/sim-nvmeof/src/: lib.rs
crates/sim-nvram/: Cargo.toml
crates/sim-nvram/src/: lib.rs
crates/sim-other/: Cargo.toml
crates/sim-other/src/: lib.rs
crates/spacectl/: Cargo.toml
crates/spacectl/src/: main.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
deployment/: csi-deployment.yaml  csi-driver.yaml  kind-config.yaml
docs/: CONTAINERIZATION.md  README.md  SIMULATIONS.md  architecture.md  capsuleflow.md  dependency-security.md  example-policy.yaml  federation.md  future_state_architecture.md  patentable_concepts.md  phase4.md  podms.md  protocol_views.md
docs/security/: audit-status.json
docs/security/meetings/: 2025-11.md
examples/: phase4-policy.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: encrypt_roundtrip.rs  policy_fuzz.rs
scripts/: setup_home_lab_sim.sh  test_e2e_sim.sh  test_federation_resilience.sh  test_phase4_views.sh
sim/: README.md  entrypoint.sh
sim/nvmeof/: config.toml
sim/nvram/: config.toml
xtask/: Cargo.toml
xtask/src/: main.rs
