[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/capsule-registry",
    "crates/nvram-sim",
    "crates/protocol-block",
    "crates/protocol-nfs",
    "crates/protocol-s3",
    "crates/spacectl",
    "crates/encryption",    # NEW: Phase 3 encryption crate
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Shane Wall <shane@adaptive-storage.dev>"]
license = "BUSL-1.1"

[workspace.dependencies]
# Shared dependencies across all crates
uuid = { version = "1.10", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }

# Phase 2.1: Compression
lz4 = "1.27"
zstd = "0.13"

# Phase 2.2: Deduplication
blake3 = "1.5"
bloomfilter = "1.0.13"
hex = "0.4"

# Phase 2: Security
zeroize = "1.7"

# Phase 3: Encryption (NEW)
aes = "0.8"
cipher = "0.4"
xts-mode = "0.5"
poly1305 = "0.8"
cpufeatures = "0.2"

# Phase 2: Async
