[package]
name = "capsule-registry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[features]
default = []
pipeline_async = ["dep:tokio", "dep:futures", "dep:num_cpus"]
modular_pipeline = ["dep:pipeline", "dep:tokio"]
advanced-security = ["common/advanced-security", "nvram-sim/advanced-security"]
podms = ["dep:tokio", "pipeline_async", "common/podms", "dep:scaling"]

[dependencies]
common = { path = "../common" }
nvram-sim = { path = "../nvram-sim" }
encryption = { path = "../encryption" }  # NEW: Phase 3 encryption support
compression = { path = "../compression" }
dedup = { path = "../dedup" }
storage = { path = "../storage" }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
num_cpus = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lz4 = { workspace = true }
zstd = { workspace = true }
blake3 = { workspace = true }
subtle = { workspace = true }
bytes = "1.7"
pipeline = { path = "../pipeline", optional = true }
scaling = { path = "../scaling", optional = true }

[dev-dependencies]
tracing-test = { workspace = true }
futures = { workspace = true }
criterion = "0.5"

[[bench]]
name = "pipeline"
harness = false
