[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[features]
default = []
advanced-security = [
    "dep:aya",
    "dep:blake3",
    "dep:bloomfilter",
    "dep:http",
    "dep:pqcrypto-kyber",
    "dep:pqcrypto-traits",
    "dep:reqwest",
    "dep:tokio",
    "dep:tokio-tungstenite",
    "dep:tracing",
]
podms = ["dep:tracing"]  # PODMS types enabled via feature flag

[dependencies]
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
blake3 = { workspace = true, optional = true }
bloomfilter = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
pqcrypto-kyber = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
http = { version = "1", optional = true }
pqcrypto-traits = { version = "0.3", optional = true }
tracing = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
aya = { workspace = true, optional = true }

[dev-dependencies]
