[package]
name = "compression"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
common = { path = "../common" }
thiserror = { workspace = true }
tracing = { workspace = true }
lz4 = { workspace = true }
zstd = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
tracing-test = { workspace = true }
