[package]
name = "encryption"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
# Core dependencies (already in workspace)
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }

# Zeroize with derive feature for secure memory
zeroize = { workspace = true, features = ["derive"] }
hmac = { workspace = true }
sha2 = { workspace = true }

# Phase 3: Crypto dependencies (now in workspace)
aes = { workspace = true }
cipher = { workspace = true }
xts-mode = { workspace = true }
poly1305 = { workspace = true }
cpufeatures = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
proptest = { version = "^1.8.0" } # Tier2 dev-only per docs/dependency-security.md
rand = { version = "^0.9.2" }  # For generating test keys
serial_test = { version = "^3.2.0" }

[features]
default = ["std"]
std = []
experimental = []
pqc = []
tee = []
