[package]
name = "nvram-sim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[features]
default = []
advanced-security = ["common/advanced-security"]

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
