[package]
name = "protocol-fuse"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[features]
default = []
phase4 = ["common/podms"]

[dependencies]
anyhow = { workspace = true }
capsule-registry = { path = "../capsule-registry" }
common = { path = "../common" }
tracing = { workspace = true }
