[package]
name = "protocol-fuse"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[features]
default = []
phase4 = ["common/podms", "scaling/phase4"]

[dependencies]
anyhow = { workspace = true }
capsule-registry = { path = "../capsule-registry" }
common = { path = "../common" }
scaling = { path = "../scaling", features = ["phase4"] }
tracing = { workspace = true }
fuse-rs = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
