[package]
name = "protocol-s3"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
capsule-registry = { path = "../capsule-registry" }
nvram-sim = { path = "../nvram-sim" }

# HTTP server
axum = "0.7"
tokio = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
bytes = "1.5"