[package]
name = "protocol-s3"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[features]
default = []
modular_pipeline = ["capsule-registry/modular_pipeline"]

[dependencies]
common = { path = "../common" }
capsule-registry = { path = "../capsule-registry" }
nvram-sim = { path = "../nvram-sim" }

# HTTP server
axum = { version = "^0.7.9" } # 2025-11-03 sw: Tier1 HTTP surface per docs/dependency-security.md
tokio = { workspace = true }
tower = { version = "^0.4.13" } # 2025-11-03 sw: aligns with axum 0.7 require
tower-http = { version = "^0.5.2", features = ["cors", "trace"] } # 2025-11-03 sw: HTTP middleware review logged

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Utilities
bytes = { version = "^1.10.1" } # 2025-11-03 sw: pinned to release used in audit
