[package]
name = "scaling"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }

# Note: Gossip discovery (memberlist) will be added in Step 3
# For Step 2 POC, we use manual peer registration

# Sibling dependencies
common = { path = "../common", features = ["podms"] }

[dev-dependencies]
tracing-test = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
