[package]
name = "spacectl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "spacectl"
path = "src/main.rs"

[features]
default = []
pipeline_async = ["capsule-registry/pipeline_async"]

[dependencies]
common = { path = "../common" }
capsule-registry = { path = "../capsule-registry" }
nvram-sim = { path = "../nvram-sim" }
protocol-s3 = { path = "../protocol-s3" }
protocol-nfs = { path = "../protocol-nfs" }
protocol-block = { path = "../protocol-block" }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
