[package]
name = "spacectl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "spacectl"
path = "src/main.rs"

[features]
default = []
pipeline_async = ["capsule-registry/pipeline_async"]
modular_pipeline = [
    "capsule-registry/modular_pipeline",
    "protocol-s3/modular_pipeline",
]

[dependencies]
common = { path = "../common" }
capsule-registry = { path = "../capsule-registry" }
nvram-sim = { path = "../nvram-sim" }
protocol-s3 = { path = "../protocol-s3" }
protocol-nfs = { path = "../protocol-nfs" }
protocol-block = { path = "../protocol-block" }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
